--- a/about.html
+++ b/about.html
@@ -388,7 +388,7 @@ CONTACT FORM START
                         <div class="single-footer-caption mb-50">
                             <!-- social -->
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/air.venture/?hl=en"><i class="fab fa-instagram"></i></a>
                                 <a href="#"><i class="fab fa-tiktok"></i></a>
                                 <a href="#"><i class="fab fa-facebook"></i></a>
 
@@ -405,7 +405,7 @@ CONTACT FORM START
                     <div class="row">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <p>
                                 AirVenture - Registered Company INSERT COMPANY NUMBER HERE &copy;<script>document.write(new Date().getFullYear());</script></a></p>
                               </div>
                           </div>
