--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <div class="single-footer-caption mb-50">
                             <!-- social -->
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/air.venture/?hl=en"><i class="fab fa-instagram"></i></a>
                                 <a href="#"><i class="fab fa-tiktok"></i></a>
                                 <a href="#"><i class="fab fa-facebook"></i></a>
                             </div>
@@ -402,7 +402,7 @@
                     <div class="row">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <p>
                                 AirVenture - Registered Company INSERT COMPANY NUMBER HERE &copy;<script>document.write(new Date().getFullYear());</script></a></p>
                               </div>
                           </div>
