--- a/about.html
+++ b/about.html
@@ -406,7 +406,7 @@ CONTACT FORM START
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p>
-                                AirVenture - Registered Company INSERT COMPANY NUMBER HERE &copy;<script>document.write(new Date().getFullYear());</script></a></p>
+                                AirVenture - Registered Company 14527684 &copy;<script>document.write(new Date().getFullYear());</script></a></p>
                               </div>
                           </div>
                       </div>
