--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
                                 <p>
-                                AirVenture - Registered Company 14527684 &copy;<script>document.write(new Date().getFullYear());</script></a></p>
+                                AirVenture is a trading name of AirVenture Studios LTD<br>Registered in the UK, Company Number: 14527684 <br>&copy;<script>document.write(new Date().getFullYear());</script></a></p>
                               </div>
                           </div>
                       </div>
