--- a/contact.html
+++ b/contact.html
@@ -158,8 +158,8 @@
                             <div class="footer-tittle">
                                 <h4>Navigation</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="services.html">Services</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -169,10 +169,10 @@
                             <div class="footer-tittle">
                                 <h4>Services</h4>
                                 <ul>
-                                    <li><a href="#">Drone Mapping</a></li>
-                                    <li><a href="#">Real State</a></li>
-                                    <li><a href="#">Commercial</a></li>
-                                    <li><a href="#">Construction</a></li>
+                                    <li><a href="services.html">Drone Mapping</a></li>
+                                    <li><a href="services.html">Real State</a></li>
+                                    <li><a href="services.html">Commercial</a></li>
+                                    <li><a href="services.html">Construction</a></li>
                                 </ul>
                             </div>
                         </div>
