--- a/about.html
+++ b/about.html
@@ -176,13 +176,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Single Testimonial -->
+
+
+
+                                <!-- Single Testimonial Curts  
                                 <div class="single-testimonial position-relative">
                                     <div class="testimonial-caption">
                                         <img src="assets/img/icon/quotes-sign.png" alt="" class="quotes-sign">
                                         <p>INSERT QUOTE HERE</p>
                                     </div>
-                                    <!-- founder -->
+                                    <!-- founder 
                                     <div class="testimonial-founder d-flex align-items-center">
                                         <div class="founder-img">
                                             <img src="assets/img/icon/curtis.png" alt="">
@@ -191,7 +194,9 @@
                                             <span>Curtis Allen</span>
                                             <p>Co-founder of AirVenture</p>
                                         </div>
-                                    </div>
+                                    </div> 
+
+                                    -->
                                 </div>
                             </div>
                         </div>
@@ -366,7 +371,7 @@ CONTACT FORM START
                                 <h4>Navigation</h4>
                                 <ul>
                                     <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <li><a href="services.html">Services</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -376,10 +381,10 @@ CONTACT FORM START
                             <div class="footer-tittle">
                                 <h4>Services</h4>
                                 <ul>
-                                    <li><a href="#">Drone Mapping</a></li>
-                                    <li><a href="#">Real State</a></li>
-                                    <li><a href="#">Commercial</a></li>
-                                    <li><a href="#">Construction</a></li>
+                                    <li><a href="services.html">Drone Mapping</a></li>
+                                    <li><a href="services.html">Real State</a></li>
+                                    <li><a href="services.html">Commercial</a></li>
+                                    <li><a href="services.html">Construction</a></li>
                                 </ul>
                             </div>
                         </div>
