--- a/services.html
+++ b/services.html
@@ -205,7 +205,7 @@
                             <div class="footer-tittle">
                                 <h4>Navigation</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="#">Services</a></li>
                                 </ul>
                             </div>
