--- a/services.html
+++ b/services.html
@@ -153,7 +153,10 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Residential Real Estate Photography</a></h5>
-                                <p>Whether you've got a property on the market and want to take stunning images, or want to just display your property in your house, we've got you covered.</p>
+                                <p>Whether you've got a property on the market and want to take stunning images, or want to just display your property in your house, we've got you covered. Why settle for flat, lifeless photos of your rental property? Elevate your listings with breathtaking aerial photography and give potential renters a true sense of what it's like to live in the property. Trust us, it will make all the difference!
+
+
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -164,7 +167,10 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Thermal mapping</a></h5>
-                                <p>If you need thermal mapping of your land or site, we've got you covered. </p>
+                                <p>Thermal mapping is a powerful tool for a variety of applications, including detecting energy loss in buildings, identifying hot spots in electrical equipment, and even detecting structural issues in bridges and other infrastructure. <br><br>
+
+But what sets thermal mapping with drones apart is its ability to cover large areas quickly and efficiently. Traditional thermal imaging methods require technicians to physically access every area being scanned, which can be time-consuming and potentially dangerous. With drones, we can safely and easily capture thermal images of hard-to-reach areas, saving time and resources.
+</p>
                             </div>
                         </div>
                     </div>
