--- a/services.html
+++ b/services.html
@@ -167,9 +167,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Thermal mapping</a></h5>
-                                <p>Thermal mapping is a powerful tool for a variety of applications, including detecting energy loss in buildings, identifying hot spots in electrical equipment, and even detecting structural issues in bridges and other infrastructure. <br><br>
-
-But what sets thermal mapping with drones apart is its ability to cover large areas quickly and efficiently. Traditional thermal imaging methods require technicians to physically access every area being scanned, which can be time-consuming and potentially dangerous. With drones, we can safely and easily capture thermal images of hard-to-reach areas, saving time and resources.
+                                <p>Thermal mapping is a powerful tool for a variety of applications, including detecting energy loss in buildings, identifying hot spots in electrical equipment, and even detecting structural issues in bridges and other infrastructure. 
 </p>
                             </div>
                         </div>
