--- a/about.html
+++ b/about.html
@@ -192,13 +192,13 @@
 
 
 
-                                <!-- Single Testimonial Curts  
+                                <!-- Single Testimonial Curts  --->
                                 <div class="single-testimonial position-relative">
                                     <div class="testimonial-caption">
                                         <img src="assets/img/icon/quotes-sign.png" alt="" class="quotes-sign">
-                                        <p>INSERT QUOTE HERE</p>
+                                        <p>The sky is not the limit for an aerial photographer it is just the beginning, every photograph taken from the sky is a unique perspective on the world that tells a story, and we are privileged to share those stories through our images</p>
                                     </div>
-                                    <!-- founder 
+                                 
                                     <div class="testimonial-founder d-flex align-items-center">
                                         <div class="founder-img">
                                             <img src="assets/img/icon/curtis.png" alt="">
@@ -209,7 +209,7 @@
                                         </div>
                                     </div> 
 
-                                    -->
+                                    
                                 </div>
                             </div>
                         </div>
