--- a/about.html
+++ b/about.html
@@ -178,17 +178,22 @@
                                         <p>We aim to use our expertise and high tech drones to continue to help our clients to get the great content they need. I'm proud of 
                                         work we have done at AirVenture so far and believe we will continue to grow to become a leading aerial photography/videography company in the UK.</p>
                                     </div>
+
+
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center">
-                                        <div class="founder-img">
-                                            <img src="assets/img/icon/shummus.png" alt="">
+                                              <picture>
+                                                <source media="(min-width: 900px)" srcset="assets/img/icon/Shummus.png">
+                                                <source media="(min-width: 480px)" srcset="assets/img/icon/shummussmall.png">
+                                                <img src="assets/img/icon/shummus.png" alt="IfItDoesntMatchAnyMedia">
+                                                </picture>
                                         </div>
                                         <div class="founder-text">
                                             <span>Shummus Shah</span>
                                             <p>Co-founder of AirVenture</p>
                                         </div>
                                     </div>
-                                </div>
+                     
 
 
 
@@ -200,8 +205,11 @@
                                     </div>
                                  
                                     <div class="testimonial-founder d-flex align-items-center">
-                                        <div class="founder-img">
+                                        <div>
                                             <img src="assets/img/icon/curtis.png" alt="">
+
+
+
                                         </div>
                                         <div class="founder-text">
                                             <span>Curtis Allen</span>
