--- a/about.html
+++ b/about.html
@@ -182,9 +182,10 @@
 
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center">
+                                        <div>
                                               <picture>
                                                 <source media="(min-width: 900px)" srcset="assets/img/icon/Shummus.png">
-                                                <source media="(min-width: 480px)" srcset="assets/img/icon/shummussmall.png">
+                                                <source media="(min-width: 550px)" srcset="assets/img/icon/shummussmall.png">
                                                 <img src="assets/img/icon/shummus.png" alt="IfItDoesntMatchAnyMedia">
                                                 </picture>
                                         </div>
@@ -192,8 +193,13 @@
                                             <span>Shummus Shah</span>
                                             <p>Co-founder of AirVenture</p>
                                         </div>
-                                    </div>
+                                    </div></div>
                      
+
+
+
+
+
 
 
 
@@ -206,9 +212,11 @@
                                  
                                     <div class="testimonial-founder d-flex align-items-center">
                                         <div>
-                                            <img src="assets/img/icon/curtis.png" alt="">
-
-
+                                              <picture>
+                                                <source media="(min-width: 900px)" srcset="assets/img/icon/Curtis.png">
+                                                <source media="(min-width: 550px)" srcset="assets/img/icon/curtissmall.png">
+                                                <img src="assets/img/icon/Curtis.png" alt="IfItDoesntMatchAnyMedia">
+                                                </picture>
 
                                         </div>
                                         <div class="founder-text">
