--- a/about.html
+++ b/about.html
@@ -186,7 +186,8 @@
                                               <picture>
                                                 <source media="(min-width: 900px)" srcset="assets/img/icon/Shummus.png">
                                                 <source media="(min-width: 550px)" srcset="assets/img/icon/shummussmall.png">
-                                                <img src="assets/img/icon/shummus.png" alt="IfItDoesntMatchAnyMedia">
+                                                <source media="(min-width: 400px)" srcset="assets/img/icon/shummussmallest.png">
+                                                <img src="assets/img/icon/shummussmall.png" alt="IfItDoesntMatchAnyMedia">
                                                 </picture>
                                         </div>
                                         <div class="founder-text">
@@ -215,7 +216,8 @@
                                               <picture>
                                                 <source media="(min-width: 900px)" srcset="assets/img/icon/Curtis.png">
                                                 <source media="(min-width: 550px)" srcset="assets/img/icon/curtissmall.png">
-                                                <img src="assets/img/icon/Curtis.png" alt="IfItDoesntMatchAnyMedia">
+                                                <source media="(min-width: 400px)" srcset="assets/img/icon/curtismallest.png">    
+                                                <img src="assets/img/icon/Curtissmall.png" alt="IfItDoesntMatchAnyMedia">
                                                 </picture>
 
                                         </div>
