--- a/3dtours.html
+++ b/3dtours.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AirVenture | Services</title>
+    <title>AirVenture | 3D Tours</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -74,7 +74,7 @@
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="3dtours.html">3D Tours</a></li>
+                                                <li><a href="services.html">Drone Services</a></li>
                                                 <!-- Header btn -->
                                                 <li>
                                                     <div class="header-right-btn ml-40">
@@ -105,92 +105,70 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero__caption hero__caption2">
-                                <h2>Drone Services</h2>
+                                <h2>3D Tours</h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <!-- Hero End -->
-        <!--? services area start -->
-        <section class="services-section section-padding30 fix">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/airbnb.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">AirBnb / Holiday Resort</a></h5>
-                                <p>A recent study found that professional Airbnb photos can increase earnings by 40%, increase bookings by 24%, and even increase the price by 26%. With Aerial images you can really capture your property and engage with customers in a greater way than with standarf photography.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/services04.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Private Events</a></h5>
-                                <p>Weddings, Birthdays, Baby showers and everything in between - We'll help you capture your moments with stunning images.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/roofing.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Roofing Inspections</a></h5>
-                                <p>We have helped many roofers showcase their work after completing their jobs, this is often upsold by the roofers as an additional service for them. If your a roofer and want to discuss commercial agreements please get in touch.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/services2.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Commercial Real Estate Photography</a></h5>
-                                <p>We'll help you get stunning images of your commerical property. Forget those boring images, we'll showcase your buildings in the best angles to ensure you show off your property in the best way.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/services1.png"alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Residential Real Estate Photography</a></h5>
-                                <p>Whether you've got a property on the market and want to take stunning aerial images, or want to create an interactive 3d tour of your property, we've got you covered. Why settle for flat, lifeless photos of your rental property? Elevate your listings with breathtaking aerial photography and 3D tours to give potential renters a true sense of what it's like to live in the property. Trust us, it will make all the difference!
 
 
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/thermal.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Thermal mapping</a></h5>
-                                <p>Thermal mapping is a powerful tool for a variety of applications, including detecting energy loss in buildings, identifying hot spots in electrical equipment, and even detecting structural issues in bridges and other infrastructure. 
-</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Services End -->
+
+
+        <section class="sample-text-area">
+            <div class="container box_1170">
+
+        <div class="section-top-border">
+
+
+
+
+                                      <h1 class="mb-30">Why opt for 3D Modelling?</h3> 
+                                            <div class="row">
+                                                <div class="col-md-4">
+                                                    <div class="single-defination">
+                                                        <h2 class="mb-20">Time Saving</h4>
+                                                        <p>Suppose you're trying to sell or rent a house, by having a 3D model of your property; you
+                                                        will no longer have to conduct viewings for those who simply want to know what the inside of 
+                                                        the property looks like. You will only have to conduct viewings for people who have already
+                                                        seen the property, and have a <b>real intent</b> of buying or renting the property.  </p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="single-defination">
+                                                        <h2 class="mb-20">Increased efficiency</h4>
+                                                        <p><b>63%</b> of people who bought a home in 2020 made an offer for a property based on a virtual tour. This shows there is real demand for this service now, people can view the property virtually 24 hours a day. This can save your company time and in turn money by utilising this technology.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="single-defination">
+                                                        <h2 class="mb-20">Increased Interest</h4>
+                                                        <p>Homes listings with videos get <b>403%</b> more inquiries than those without them. By having an interactive virtual tour, people can engage with the property and get a proper feel of what the property has got to offer.</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
