--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                                         <nav>
                                             <ul id="navigation">
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="services.html">Drone Services</a></li>
+                                                <li><a href="3dtours.html">3D Tours</a></li> 
                                                 <!-- Header btn -->
                                                 <li>
                                                     <div class="header-right-btn ml-40">
@@ -119,8 +120,8 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-8 col-lg-9 col-md-12">
                                 <div class="hero__caption text-center">
-                                    <h1 data-animation="bounceIn" data-delay="0.2s">Aeiral Photography <br> & Videography</h1>
-                                    <p data-animation="fadeInUp" data-delay="0.4s">Whatever the occasion, we can help capture your moment with our high-tech 4K HDR Drones.</p>
+                                    <h1 data-animation="bounceIn" data-delay="0.2s">Aeiral Photography <br> & 3D Tours</h1>
+                                    <p data-animation="fadeInUp" data-delay="0.4s">Whatever the occasion, we can help capture your moment with our high-tech 4K camera equipment.</p>
                                     <a href="services.html" class="hero-btn" data-animation="fadeInUp" data-delay="0.7s">Explore services</a>
                                 </div>
                             </div>
@@ -154,12 +155,12 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                <h2>Hassle-Free Drone<br> Photography/Videography</h2>
+                                <h2>Hassle-Free Drone Photography <br>and Virtual 3D Tours </h2>
                             </div>
                             <p class="about-cap-top">We'll get to know your exact requirements, and capture stunning footage.</p>
                             <p>From real estate, weddings, construction work and corporate events, we've got you covered.
                                 <br><br>
-                                Not only can our drones capture incredible images, they can also capture videos in 4K.
+                                We specialise in caputring stunning Drone images as well as modelling 3D tours with our 360' cameras.
 
                             </p>
                             <a href="services.html" class="btn black-btn">Explore services</a>
@@ -197,7 +198,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Residential Real Estate Photography</a></h5>
-                                <p>Whether you've got a property on the market and want to take stunning images, or want to just display your property in your house, we've got you covered.</p>
+                                <p>Whether you've got a property on the market and want to take stunning aerial images, or want to create an interactive 3d tour of your property, we've got you covered.</p>
                             </div>
                         </div>
                     </div>
@@ -331,13 +332,13 @@
                             </div>
                             <!-- single-item -->
                             <div class="single-items single-items2 mb-50">
-                                <span>We'll Schedule a Flight</span>
-                                <p>We'll arrange a date/time to bring our 4K HDR drones to meet your requirements.</p>
+                                <span>We'll arrange an appoint</span>
+                                <p>We'll arrange a date/time to bring our 4K HDR drones and 3D cameras to meet your requirements.</p>
                             </div>
                             <!-- single-item -->
                             <div class="single-items single-items3 mb-50">
-                                <span>We'll Schedule a Flight</span>
-                                <p>We'll provide you with the raw unedited content, as well as edit the images to ensure your content reaches it's full potential.</p>
+                                <span>We'll release your content</span>
+                                <p>We'll edit and release your content to meet your requirements</p>
                             </div>
                         </div>
                     </div>
