--- a/about.html
+++ b/about.html
@@ -76,8 +76,8 @@
                                         <nav>
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="services.html">Services</a></li>
-                                                </li>
+                                                <li><a href="services.html">Drone Services</a></li>
+                                                <li><a href="3dtours.html">3D Tours</a></li> 
                                                 <!-- Header btn -->
                                                 <li>
                                                     <div class="header-right-btn ml-40">
@@ -124,7 +124,7 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                <h2>Hassle-Free Drone<br> Photography/Videography</h2>
+                                <h2>Hassle-Free Drone<br> Photography and 3D Tours</h2>
                             </div>
                             <p class="about-cap-top">Established in 2022, we have worked on many projects throughout the UK.</p>
                             <p>What started off as a hobby, quickly became more than that as we have been able to help capture stunning images to meet our clients' requirements. 
@@ -260,20 +260,20 @@
                         </div>
                         <div class="col-xl-5 col-lg-6 col-md-8">
                             <div class="edu-details">
-                                <!-- single-item -->
-                                <div class="single-items mb-50">
-                                    <span>Tell Us About Your Project</span>
-                                    <p>Contact us and let us know how we can help you catpure what you need.</p>
-                                </div>
-                                <!-- single-item -->
-                                <div class="single-items single-items2 mb-50">
-                                    <span>We'll Schedule a Flight</span>
-                                    <p>We'll arrange a date/time to bring our 4K HDR drones to meet your requirements.</p>
-                                </div>
-                                <!-- single-item -->
-                                <div class="single-items single-items3 mb-50">
-                                    <span>We'll edit your content</span>
-                                    <p>We'll provide you with the raw unedited content, as well as edit the images to ensure your content reaches it's full potential.</p>
+                            <!-- single-item -->
+                            <div class="single-items mb-50">
+                                <span>Tell Us About Your Project</span>
+                                <p>Contact us and let us know how we can help you catpure what you need.</p>
+                            </div>
+                            <!-- single-item -->
+                            <div class="single-items single-items2 mb-50">
+                                <span>We'll arrange an appoint</span>
+                                <p>We'll arrange a date/time to bring our 4K HDR drones and 3D cameras to meet your requirements.</p>
+                            </div>
+                            <!-- single-item -->
+                            <div class="single-items single-items3 mb-50">
+                                <span>We'll release your content</span>
+                                <p>We'll edit and release your content to meet your requirements</p>
                                 </div>
                             </div>
                         </div>
