--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,8 @@
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="services.html">Drone Services</a></li>
+                                                <li><a href="3dtours.html">3D Tours</a></li> 
 
                                             </ul>
                                         </nav>
