--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>AirVenture | Homepage</title>
-    <meta name="description" content="Aerial drone phorography and videography">
+    <meta name="description" content="3D Tours and Aerial drone photography">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -155,7 +155,7 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                <h2>Hassle-Free Drone Photography <br>and Virtual 3D Tours </h2>
+                                <h2>Hassle-Free Drone Photography<br>and Virtual 3D Tours </h2>
                             </div>
                             <p class="about-cap-top">We'll get to know your exact requirements, and capture stunning footage.</p>
                             <p>From real estate, weddings, construction work and corporate events, we've got you covered.
