--- a/3dtours.html
+++ b/3dtours.html
@@ -143,7 +143,7 @@
                                                 <div class="col-md-4">
                                                     <a href="assets/img/elements/g3.jpg" class="img-pop-up">
                                                         <div class="single-gallery-image" style="background: url(assets/img/elements/g3.jpg);">
-                                                  <div style="text-align: center;  position: absolute; top: 105%; left: 50%; transform: translate(-50%, -50%); color: black; font-size: 25px; ">Leisure Centers</div>   
+                                                  <div style="text-align: center;  position: absolute; top: 105%; left: 50%; transform: translate(-50%, -50%); color: black; font-size: 25px; ">Gyms</div>   
                                                         </div>
                                                     </a>
                                                 </div>
