--- a/about.html
+++ b/about.html
@@ -412,11 +412,8 @@ CONTACT FORM START
                             <div class="footer-tittle">
                                 <h4>Services</h4>
                                 <ul>
-                                    <li><a href="services.html">Drone Mapping</a></li>
-                                    <li><a href="services.html">Real State</a></li>
-                                    <li><a href="services.html">Commercial</a></li>
-                                    <li><a href="services.html">Construction</a></li>
-                                </ul>
+                                    <li><a href="services.html">Drone Services</a></li>
+                                    <li><a href="3dtours.html">3D Tours</a></li>
                             </div>
                         </div>
                     </div>
@@ -425,8 +422,8 @@ CONTACT FORM START
                             <!-- social -->
                             <div class="footer-social">
                                 <a href="https://www.instagram.com/air.venture/?hl=en"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-tiktok"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
+                      <!--          <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a> -->
 
                             </div>
                         </div>
