--- a/services.html
+++ b/services.html
@@ -235,10 +235,8 @@
                             <div class="footer-tittle">
                                 <h4>Services</h4>
                                 <ul>
-                                    <li><a href="#">Drone Mapping</a></li>
-                                    <li><a href="#">Real State</a></li>
-                                    <li><a href="#">Commercial</a></li>
-                                    <li><a href="#">Construction</a></li>
+                                    <li><a href="services.html">Drone Services</a></li>
+                                    <li><a href="3dtours.html">3D Tours</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -248,9 +246,9 @@
                             <!-- social -->
                             <div class="footer-social">
                                 <a href="https://www.instagram.com/air.venture/?hl=en"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-tiktok"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                            </div>
+                                <!-- <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
