--- a/3dtours.html
+++ b/3dtours.html
@@ -330,8 +330,8 @@
                             <!-- social -->
                             <div class="footer-social">
                                 <a href="https://www.instagram.com/air.venture/?hl=en"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-tiktok"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
+                        <!--        <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a> -->>
                             </div>
                         </div>
                     </div>
