--- a/services.html
+++ b/services.html
@@ -26,14 +26,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-253818249-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FBEC0EDR7N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-253818249-1');
+  gtag('config', 'G-FBEC0EDR7N');
 </script>
 
 
