--- a/3dtours.html
+++ b/3dtours.html
@@ -26,18 +26,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-253818249-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FBEC0EDR7N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-253818249-1');
+  gtag('config', 'G-FBEC0EDR7N');
 </script>
-
-
-
 </head>
 
 <body>
@@ -317,10 +314,8 @@
                             <div class="footer-tittle">
                                 <h4>Services</h4>
                                 <ul>
-                                    <li><a href="#">Drone Mapping</a></li>
-                                    <li><a href="#">Real State</a></li>
-                                    <li><a href="#">Commercial</a></li>
-                                    <li><a href="#">Construction</a></li>
+                                    <li><a href="services.html">Drone Services</a></li>
+                                    <li><a href="3dtours.html">3D Tours</a></li>
                                 </ul>
                             </div>
                         </div>
