--- a/about.html
+++ b/about.html
@@ -28,16 +28,14 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-253818249-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FBEC0EDR7N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-253818249-1');
+  gtag('config', 'G-FBEC0EDR7N');
 </script>
-
-
 
 
 
