--- a/3dtours.html
+++ b/3dtours.html
@@ -119,7 +119,7 @@
 
 
 
-                            <video loop autoplay width="100%" height="100%" controls="false" autoplay="autoplay">
+                            <video loop autoplay width="100%" height="100%" controls="false" autoplay="autoplay" muted defaultmuted>
   <source src="assets/Vid/DemoVideo.mp4" type="video/mp4">
 </video>
 
