--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>AirVenture | Services</title>
-    <meta name="description" content="">
+    <meta name="description" content="Aeriel Photography and 3D Virtual Tour Software">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
