--- a/about.html
+++ b/about.html
@@ -399,8 +399,9 @@ CONTACT FORM START
                             <div class="footer-tittle">
                                 <h4>Navigation</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="services.html">Services</a></li>
+                                    <li><a href="terms.html">Terms and Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
