--- a/3dtours.html
+++ b/3dtours.html
@@ -315,7 +315,8 @@
                                 <h4>Navigation</h4>
                                 <ul>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="terms.html">Terms and Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
