--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
                                 <ul>
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="services.html">Services</a></li>
+                                    <li><a href="terms.html">Terms and Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
