--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero__caption hero__caption2">
-                                <h2>About Us</h2>
+                                <h2>Ranis is a prick</h2>
                             </div>
                         </div>
                     </div>
