--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero__caption hero__caption2">
-                                <h2>Ranis is a prick</h2>
+                                <h2>About Us</h2>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                <h2>Hassle-Free Drone<br> Photography and 3D Tours</h2>
+                                <h2>Rani is a prick <br> and suni has a small dick</h2>
                             </div>
                             <p class="about-cap-top">Established in 2022, we have worked on many projects throughout the UK.</p>
                             <p>What started off as a hobby, quickly became more than that as we have been able to help capture stunning images to meet our clients' requirements. 
