--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             </div>
                             <!-- single-item -->
                             <div class="single-items single-items2 mb-50">
-                                <span>We'll arrange an appoint</span>
+                                <span>We'll arrange an appointment</span>
                                 <p>We'll arrange a date/time to bring our 4K HDR drones and 3D cameras to meet your requirements.</p>
                             </div>
                             <!-- single-item -->
