--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div class="col-xl-8 col-lg-9 col-md-12">
                                 <div class="hero__caption text-center">
                                     <h1 data-animation="bounceIn" data-delay="0.2s">Aeiral Photography <br> & 3D Tours</h1>
-                                    <p data-animation="fadeInUp" data-delay="0.4s">Whatever your occasion, we can help capture your moment with our high-tech 4K camera equipment.</p>
+                                    <p data-animation="fadeInUp" data-delay="0.4s">Whatever the occasion, we can help capture your moment with our high-tech 4K camera equipment.</p>
                                     <a href="services.html" class="hero-btn" data-animation="fadeInUp" data-delay="0.7s">Drone services</a>
                                     <a href="services.html" class="hero-btn" data-animation="fadeInUp" data-delay="0.7s">   3D Tours   </a>
                                 </div>
